--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,46 @@
-<!--<div class="container">-->
-<!--  <app-cockpit (serverCreated)="onServerAdded($event)"-->
-<!--        (blueprintCreated)="onBlueprintAdded($event)"-->
-<!--  ></app-cockpit>-->
-<!--  <hr>-->
-<!--  <div class="row">-->
-<!--    <div class="col-xs-12">-->
-<!--      <app-server-element *ngFor="let serverElement of serverElements"-->
-<!--      [serverElem]= "serverElement">-->
-<!--        <p #contentPara>-->
-<!--          <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>-->
-<!--          <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>-->
-<!--        </p>-->
-<!--      </app-server-element>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
 <div class="container">
-  <app-game-control (startGameEvent)="startGame($event)"></app-game-control>
-  <div class="row" *ngFor="let count of gameCount">
-    <app-odd [oddNumber] = "count" *ngIf="count % 2 !== 0"></app-odd>
-    <app-even [evenNumber] = "count" *ngIf="count % 2 === 0"></app-even>
+  <div class="row">
+    <div class="col-xs-12">
+      <button
+        class="btn btn-primary"
+        (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+      <br><br>
+      <ul class="list-group">
+<!--        <div *ngIf="onlyOdd">-->
+<!--        <li-->
+<!--          class="list-group-item"-->
+<!--          [ngClass]="{odd: odd %2 !== 0}"-->
+<!--          [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'black' : 'transparent'}"-->
+<!--        *ngFor="let odd of oddNumbers">-->
+<!--          {{odd}}-->
+<!--        </li>-->
+<!--        </div>-->
+<!--        <div *ngIf="!onlyOdd">-->
+<!--        <li-->
+<!--          class="list-group-item"-->
+<!--          [ngClass]="{odd: even %2 !== 0}"-->
+<!--          *ngFor="let even of evenNumbers">-->
+<!--          {{even}}-->
+<!--        </li>-->
+<!--        </div>-->
+        <div *appUnless="onlyOdd">
+          <li
+            class="list-group-item"
+            [ngClass]="{odd: odd %2 !== 0}"
+            [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'black' : 'transparent'}"
+            *ngFor="let odd of oddNumbers">
+            {{odd}}
+          </li>
+        </div>
+        <div [ngSwitch]="value">
+          <p *ngSwitchCase="5">Value is 5</p>
+          <p *ngSwitchCase="10">Value is 10</p>
+          <p *ngSwitchCase="50">Value is 50</p>
+          <p *ngSwitchCase="100">Value is 100</p>
+        </div>
+      </ul>
+        <p appHighlight>Normal Directive</p>
+      <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'pink'">Better Directive</p>
+    </div>
   </div>
 </div>
